Demo1-NetworkFirewall.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: MultiAZ VPC Environment with Application Loadbalancer for ECS Tasks
Parameters:
  VPC1CIDR:
    Description: CIDR Block for the VPC1
    Type: String
    Default: 10.0.0.0/16
    AllowedPattern: '[a-zA-Z0-9]+\..+'
  FirewallSubnet1CIDR:
    Description: CIDR Block for VPC1 - Firewall Subnet 1
    Type: String
    Default: 10.0.0.0/28
    AllowedPattern: '[a-zA-Z0-9]+\..+'
  PublicSubnet1CIDR:
    Description: CIDR Block for VPC1 - Public Subnet 1
    Type: String
    Default: 10.0.1.0/24
    AllowedPattern: '[a-zA-Z0-9]+\..+'
  PrivateSubnet1CIDR:
    Description: CIDR Block for VPC2 - Private Subnet 2
    Type: String
    Default: 10.0.2.0/24
    AllowedPattern: '[a-zA-Z0-9]+\..+'
Mappings:
  RegionAMIMap:
    us-west-2:
      AMI: ami-0721c9af7b9b75114
    ap-northeast-1:
      AMI: ami-06631ebafb3ae5d34
    ap-southeast-1:
      AMI: ami-018c1c51c7a13e363

Resources:
  VPC1:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VPC1CIDR
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Public
  FirewallSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: !Ref FirewallSubnet1CIDR
      MapPublicIpOnLaunch: 'false'
      AvailabilityZone: !Select 
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-FirewallSubnet1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Firewall
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone: !Select 
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PublicSubnet1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Public
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone: !Select 
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateSubnet1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Private
  InternetGateway1:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-IGW1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Public
  AttachIGW1:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC1
      InternetGatewayId: !Ref InternetGateway1
  NatGateway1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt NatGatewayEIP1.AllocationId
      SubnetId:
         Ref: PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-NATGW1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Public
  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-NAT-EIP1
        - Key: Purpose
          Value: Demo

  FirewallRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-FierwallRT1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Firewall
  FirewallSubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref FirewallSubnet1
      RouteTableId: !Ref FirewallRouteTable1


  PublicRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PublicRT1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Public Subnet
  PublicRoute1IGW:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway1
  PublicSubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable1
  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateRT1
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Private Subnet
  PrivateRoute1NatGW:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  PrivateSubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  HTTPSecurityGroup1:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access on port 80
      VpcId: !Ref VPC1
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '0'
          ToPort: '65535'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC1-HTTPSG

  EC2SSMRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - 'ec2.amazonaws.com'
            Action:
              - 'sts:AssumeRole'
      Path: '/'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2SSMRole

  EC2SSMRoleInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    DependsOn:
      - EC2SSMRole
    Properties:
      Roles:
        - !Ref EC2SSMRole
      InstanceProfileName: !Sub ${AWS::StackName}-EC2SSMRole
  PrivateInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !FindInMap [RegionAMIMap, !Ref "AWS::Region", AMI]
      InstanceType: t2.micro
      IamInstanceProfile: !Ref EC2SSMRoleInstanceProfile
      SubnetId: !Ref PrivateSubnet1
      SecurityGroupIds:
        - !Ref HTTPSecurityGroup1
      Tags: 
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateInstance
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Private
  PublicInstance:
    Type: 'AWS::EC2::Instance'
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          default:
            - "php-config"
        php-config:
          packages:
            yum:
              httpd: []
              php: []
          files:
            /var/www/html/index.php:
              content: |
                <?php
                  # Retrieve Instance metadata
                  $url = "http://169.254.169.254/latest/meta-data/instance-id";
                  $instance_id = file_get_contents($url);
                  $url = "http://169.254.169.254/latest/meta-data/local-ipv4";
                  $local_ip = file_get_contents($url);
                ?>
                <html>
                <head><title>Hello!</title></html>
                <body>
                    <h1>Network Firewall Demo</h1><br/>
                    <h1>Instance ID: <?php echo $instance_id; ?></h1>
                    <h1>Local IP: <?php echo $local_ip; ?></h1>
                    <p>This information has been retrieved from the Instance Metadata service.</p>
                </body>
                </html>
              mode: '000644'
              owner: apache
              group: apache
          services:
            sysvinit:
              httpd:
                enabled: 'true'
                ensureRunning: 'true'
    Properties:
      ImageId: !FindInMap [RegionAMIMap, !Ref "AWS::Region", AMI]
      InstanceType: t2.micro
      IamInstanceProfile: !Ref EC2SSMRoleInstanceProfile
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref HTTPSecurityGroup1
      Tags: 
        - Key: Name
          Value: !Sub ${AWS::StackName}-PublicInstance
        - Key: Purpose
          Value: Demo
        - Key: Network
          Value: Private
      UserData: 
        'Fn::Base64': 
          !Sub | 
            #!/bin/bash -ex 
            # Update 
            yum update -y 
 
            # Setting Up Configs 
            /opt/aws/bin/cfn-init -v -s ${AWS::StackName} -r PublicInstance --region ${AWS::Region}

            # send signal 
            /opt/aws/bin/cfn-signal -e $? '${DemoEC2InstanceWaitConditionHandle}' 
  DemoEC2InstanceWaitConditionHandle:
    Type: 'AWS::CloudFormation::WaitConditionHandle'
  DemoEC2InstanceWaitCondition:
    Type: 'AWS::CloudFormation::WaitCondition'
    DependsOn:
      - PublicInstance
    Properties:
      Count: '1'
      Handle: !Ref DemoEC2InstanceWaitConditionHandle
      Timeout: 300
Outputs:
  PublicInstancePublicIp:
    Value: !GetAtt PublicInstance.PublicIp
  PublicInstanceURL:
    Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${PublicInstance}"
  PrivateInstanceURL:
    Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${PrivateInstance}"
